# sam3-to-onnx

./: .gitignore  README.md  model-shapes.md  pyproject.toml
exportsam3/: export_sam3.py  onnx_inference.py  optimization.py  text_tokenizer.py  utils.py
tests/: generate_test_data_outputs.py  test_onnx_models.py  utils_for_tests.py
tests/data/prompts/: cars_prompts.json  pills_prompts.json  plants_prompts.json  prompt_template.json
